--- a/b_basic/html/a_06_table_01.html
+++ b/b_basic/html/a_06_table_01.html
@@ -20,8 +20,10 @@
         border-style:solid;
         border-color:#333; 
       }
-      thead { background-color:cadetblue}
+      thead {color:white; background-color:cadetblue;}
+      tbody { background-color:lightcyan; }
 
+      .line_impact { background-color:lightskyblue;}
     </style>
   </head>
   <body>
@@ -36,20 +38,23 @@
         </tr>
       </thead>
       <tbody>
-        <tr>
-          <th>001</th><td>Mark</td><td>Octo</td><td><a href="#">mark@email.com</a></td><td>02.04</td>
+        <tr class="line_impact">
+          <th>001</th><td colspan="2">Mark Octo</td><td><a href="#">mark@email.com</a></td><td>02.04</td>
         </tr>
         <tr>
           <th>002</th><td>Json</td><td>Airdays</td><td><a href="#">json001@email.com</a></td><td>02.14</td>
         </tr>
-        <tr>
+        <tr class="line_impact">
           <th>003</th><td>Larry</td><td>Visualy</td><td><a href="#">larry@email.com</a></td><td>03.02</td>
         </tr>
         <tr>
           <th>004</th><td>Gray</td><td>Bootlamp</td><td><a href="#">gray_color@email.com</a></td><td>04.01</td>
         </tr>
+        <tr class="line_impact">
+          <th rowspan="2">005</th><td rowspan="2">Park</td><td rowspan="2">-</td><td><a href="#">green@email.com</a></td><td>05.01</td>
+        </tr>
         <tr>
-          <th>005</th><td>Park</td><td>-</td><td><a href="#">green@email.com</a></td><td>05.01</td>
+          <td><a href="#">green2@email.com</a></td><td>05.01</td>
         </tr>
       </tbody>
 
