--- a/b_basic/index.html
+++ b/b_basic/index.html
@@ -21,6 +21,7 @@
         <li><a href="./html/a_05_img_anker.html">이미지 요소 및 페이지 이동인 앵커 표현</a></li>
         <li><a href="./html/a_06_table_01.html">테이블 기초 구조</a></li>
         <li><a href="./html/a_07_selector_01.html">선택자</a></li>
+        <li><a href="./html/a_08_selector_02.html">선택자2 - 자손,자식선택자</a></li>
       </ul>
     </div><!-- // .html_area -->
   </div><!-- // .wrap -->
