inline vs block

--- a/b_basic/index.html
+++ b/b_basic/index.html
@@ -23,6 +23,7 @@
         <li><a href="./html/a_07_selector_01.html">선택자</a></li>
         <li><a href="./html/a_08_selector_02.html">선택자2 - 자손,자식선택자</a></li>
         <li><a href="./html/a_09_psuedo_code.html">의사전달코드</a></li>
+        <li><a href="./html/a_10_display.html">inline과 block의 이해, display추가 속성</a></li>
       </ul>
     </div><!-- // .html_area -->
   </div><!-- // .wrap -->
