--- a/b_step_01/index.html
+++ b/b_step_01/index.html
@@ -26,6 +26,13 @@
         <li><a href="./html/a_10_display.html">inline과 block의 이해, display추가 속성</a></li>
       </ul>
     </div><!-- // .html_area -->
+    <div class="css_area">
+      <h3>css 기본 코드</h3>
+      <ul>
+        <li><a href="./html/a_11_margin.html">여백의 설정 - margin</a></li>
+        <li><a href="./html/a_12_padding.html">여백의 설정 - padding</a></li>
+      </ul>
+    </div>
   </div><!-- // .wrap -->
 </body>
 </html>
