--- a/b_step_01/index.html
+++ b/b_step_01/index.html
@@ -32,6 +32,7 @@
         <li><a href="./html/a_11_margin.html">여백의 설정 - margin</a></li>
         <li><a href="./html/a_12_padding.html">여백의 설정 - padding</a></li>
         <li><a href="./html/a_13_border.html">외곽선의 설정 - border</a></li>
+        <li><a href="./html/a_14_outline.html">외곽선의 설정 - outline</a></li>
       </ul>
     </div>
   </div><!-- // .wrap -->
