float기능에 대해 정리 - 문제발생
마지막요소에 clear개념 정리할 수 없음

--- a/b_step_01/index.html
+++ b/b_step_01/index.html
@@ -34,6 +34,8 @@
         <li><a href="./html/a_12_padding.html">여백의 설정 - padding</a></li>
         <li><a href="./html/a_13_border.html">외곽선의 설정 - border</a></li>
         <li><a href="./html/a_14_outline.html">외곽선의 설정 - outline</a></li>
+
+        <li><a href="./html/a_15_float.html">float의 이해</a></li>
       </ul>
     </div>
   </div><!-- // .wrap -->
