float처리와 clear기능이해

--- a/b_step_01/html/a_15_float.html
+++ b/b_step_01/html/a_15_float.html
@@ -70,6 +70,31 @@
           <li class="float2">float_06</li>
           <!-- <br class="clear" /> -->
         </ul>
+      </div><!--// .part -->
+
+      <div class="part">
+        <h2>float, clear 혼합하여 정리</h2>
+        <div class="exam2">
+          <ul>
+            <li class="li_float">float_01</li>
+            <li class="li_float">float_02</li>
+            <li class="li_float">float_03</li>
+            <li class="li_float">float_04</li>
+            <li class="li_float">float_05</li>
+            <li class="li_float">float_06</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+            <li class="li_float">float_07</li>
+          </ul>
+        </div>
       </div>
 
 
