--- a/b_step_01/index.html
+++ b/b_step_01/index.html
@@ -36,6 +36,7 @@
         <li><a href="./html/a_14_outline.html">외곽선의 설정 - outline</a></li>
 
         <li><a href="./html/a_15_float.html">float의 이해</a></li>
+        <li><a href="./html/a_16_display.html">display와 유사기능</a></li>
       </ul>
     </div>
   </div><!-- // .wrap -->
