--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -3,6 +3,11 @@
 <html lang="ko-KR">
   <head>
     <meta charset="UTF-8">
+    <link rel="preconnect" href="https://fonts.googleapis.com">
+    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
+    <link href="https://fonts.googleapis.com/css2?family=Noto+Sans+KR:wght@100;400;700&display=swap" rel="stylesheet">
+    <link rel="stylesheet" href="../css/common/reset.css">
+    <link rel="stylesheet" href="../css/common/common.css">
     <link rel="stylesheet" href="../css/src/a_content.css">
     <title>웹기초</title>
   </head>
@@ -11,7 +16,6 @@
     
       <h1><a href="./a_content.html">웹기초</a></h1>
       <hr />
-      <button>button</button>
       
       <div class="part">
         <h2>영역별 제목</h2>
