--- a/b_step_02/html/b_01_nthChild.html
+++ b/b_step_02/html/b_01_nthChild.html
@@ -18,7 +18,7 @@
       <h1><a href="./a_content.html">웹기초</a></h1>
       <hr />
       
-      <div class="part none">
+      <div class="part">
         <h2>nth-child</h2>
         <ul class="n_child">
           <li class="list">list_01</li>
