--- a/b_step_02/html/b_03_semantic.html
+++ b/b_step_02/html/b_03_semantic.html
@@ -17,7 +17,27 @@
   </head>
   <body>
     <div id="wrap">
-      
+      <header id="headBox">
+        <h1><a href="./a_content.html">웹기초</a></h1>
+        <nav id="navBox">
+          <h2>global navigation</h2>
+        </nav>
+      </header>
+      <section id="slideBox">
+        <h2>웹페이지 대표 광고</h2>
+      </section>
+      <article id="bestBox">
+        <h2>인기 상품</h2>
+      </article>
+      <article id="contentBox">
+        <h2>본분 내용</h2>
+      </article>
+      <aside id="sideBox">
+        <h2>보조영역</h2>
+      </aside>
+      <footer id="footBox">
+        <h2>사이트 정보안내</h2>
+      </footer>
     </div>
   </body>
 </html>
