--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -24,8 +24,12 @@
           <ul>
             <li><a href="./b_01_nthChild.html">nth-child</a></li>
             <li><a href="./b_02_nthOfType.html">nth-of-type</a></li>
-            <li><a href="./b_03_semantic.html">의미를 가지는 영역 - semantic</a></li>
-            <li><a href="#">기능파악하기_04</a></li>
+            <li>
+              <a href="./b_03_semantic.html">
+                의미를 가지는 영역 - semantic
+              </a>
+            </li>
+            <li><a href="./b_04_position.html">포지션 기본개념</a></li>
           </ul>
         </div>
       </div><!--// .part -->
