--- a/b_step_02/html/b_04_position.html
+++ b/b_step_02/html/b_04_position.html
@@ -24,9 +24,9 @@
           <ul class="clearfix">
             <li class="default">default</li>
             <li class="static">static</li>
-            <li class="fixed">fixed</li>
-            <li class="absolute">absolute</li>
-            <li class="relative">relative</li>
+            <li class="fixed"><a href="#">fixed</a></li>
+            <li class="absolute"><a href="#">absolute</a></li>
+            <li class="relative"><a href="#">relative</a></li>
             <li class="default">default</li>
           </ul>
         </div>
