--- a/c_project_01/html/main.html
+++ b/c_project_01/html/main.html
@@ -19,6 +19,26 @@
           <h1 id="logo">osam</h1>
           <nav id="navBox">
             <h2 class="blind">page navigation</h2>
+            <div class="unb">
+              <h3 class="blind">사용자 설정 네비게이션</h3>
+              <ul class="clearfix first_margin">
+                <li>unb_01</li>
+                <li>unb_02</li>
+                <li>unb_03</li>
+                <li>unb_04</li>
+              </ul>
+            </div>
+            <div class="gnb">
+              <h3 class="blind">페이지 전체 네비게이션</h3>
+              <ul class="clearfix first_margin">
+                <li>gnb_01</li>
+                <li>gnb_02</li>
+                <li>gnb_03</li>
+                <li>gnb_04</li>
+                <li>gnb_05</li>
+                <li>gnb_06</li>
+              </ul>
+            </div>
           </nav>
         </div>
       </header><!-- // #headBox -->
