실습예제2: slide광고영역

--- a/c_project_01/html/main.html
+++ b/c_project_01/html/main.html
@@ -45,6 +45,10 @@
       
       <section id="slideBox">
         <h2 class="blind">주요 광고영역</h2>
+        <div class="slide_btn">
+          <button type="button" class="next">다음 내용 보기</button>
+          <button type="button" class="prev">이전 내용 보기</button>
+        </div>
         <div id="adCon_01">
           adCon_01
         </div>
