img요소와 background 비교 숨김파일 표시

--- a/b_step_02/html/c_01_img_vs_background.html
+++ b/b_step_02/html/c_01_img_vs_background.html
@@ -18,7 +18,7 @@
       <h1><a href="./a_content.html">웹기초</a></h1>
       <hr />
       
-      <article class="part none">
+      <article class="part">
         <h2>이미지요소 불러오기 및 배경이미지 불러오기</h2>
         <ul class="ex_wrap clearfix first_margin">
           <li class="img_area img_01">
