--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -39,6 +39,7 @@
         <p>이미지요소를 삽입방법과 배경이미지를 사용하는방법을 파악하고, 그에따른 다양한 형태와 내용들을 이해해보자</p>
         <ul>
           <li><a href="./c_01_img_vs_background.html">이미지요소와 배경이미지 처리</a></li>
+          <li><a href="./c_02_ir_is.html"><abbr title="image replace">IR</abbr>기법과 <abbr title="image sprite">IS</abbr>기법</a></li>
         </ul>
         
       </section><!-- // .part -->
