--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -35,7 +35,7 @@
       </section><!--// .part -->
       <hr />
       <section class="part">
-        <h2>이미지 삽입 및 색상 처리 방법</h2>
+        <h2>이미지 삽입 및 색상 처리 및 글씨 방법</h2>
         <p>이미지요소를 삽입방법과 배경이미지를 사용하는방법을 파악하고, <br />그에따른 다양한 형태와 내용들을 이해해보자</p>
         <ul>
           <li><a href="./c_01_img_vs_background.html">이미지요소와 배경이미지 처리</a></li>
@@ -45,6 +45,7 @@
             </a>
           </li>
           <li><a href="./c_03_gradient.html">gradient</a></li>
+          <li><a href="./c_04_font.html">font 설명</a></li>
         </ul>
         
       </section><!-- // .part -->
