--- a/b_step_02/html/c_06_font_icon.html
+++ b/b_step_02/html/c_06_font_icon.html
@@ -23,7 +23,14 @@
       <div class="part">
         <h2>폰트아이콘 이용하여 사용방법 이해하기</h2>
         <ul class="ex_wrap">
-       
+          <li><i class="fab fa-facebook"></i></li>
+          <li><a href="#" title="로그인"><i class="fas fa-user-circle"></i> <span>로그인</span></a></li>
+          <li>
+            <button type="button" title="다음내용보기">
+              <i class="fas fa-arrow-circle-right"></i>
+              <span class="blind">다음 내용보기</span>
+            </button>
+          </li>          
         </ul>
         
       </div>
