2주차 과제내용

--- a/c_project_01/html/main.html
+++ b/c_project_01/html/main.html
@@ -113,6 +113,15 @@
       <article id="galleryBox">
         <h2 class="max_width_01 area_title">area_title</h2>
         <div class="max_width_01 area_content">
+          <div class="gallery_main_content">
+            <span class="blind">대표 이미지 설명</span>
+          </div>
+          <ul class="gallery_list">
+            <li><button type="button">list내용 _ 01</button></li>
+            <li><button type="button">list내용 _ 02</button></li>
+            <li><button type="button">list내용 _ 03</button></li>
+            <li><button type="button">list내용 _ 04</button></li>
+          </ul> 
         </div>
       </article><!-- // #galleryBox -->
       
@@ -120,14 +129,33 @@
         <h2 class="blind">후원사</h2>
         <div class="max_width_01 sponsor_area">
           <!-- sponsor_area -->
-          <ul></ul>
+          <ul>
+            <li>후원사_01</li>
+            <li>후원사_02</li>
+            <li>후원사_03</li>
+            <li>후원사_04</li>
+            <li>후원사_05</li>
+            <li>후원사_06</li>
+            <li>후원사_07</li>
+            <li>후원사_08</li>
+            <li>후원사_09</li>
+            <li>후원사_10</li>
+            <li>후원사_11</li>
+          </ul>
         </div>
       </aside><!-- // #sponsorBox -->
       
       <footer id="footBox">
         <div class="max_width_01 area_foot">
           <h2 class="info_logo">오삼커피 회사 정보</h2>
-          <div class="info_company">info_company</div>
+          <div class="info_company clearfix">
+            <div class="company_content">
+              info_company
+            </div>
+            <div class="social_family">
+              social list and family site
+            </div>
+          </div>
         </div>
       </footer><!-- // #footBox -->
     </div><!-- // #wrap -->
