project_01 #headBox영역 정리

--- a/c_project_01/code/html/main_v2.html
+++ b/c_project_01/code/html/main_v2.html
@@ -16,27 +16,31 @@
     
       <header id="headBox">
         <div class="area_head">
-          <h1 id="logo">osam</h1>
+          <h1 id="logo" class="blind_area">
+            <a href="../index.html">
+              <span>osam</span>
+            </a>
+          </h1>
           <nav id="navBox">
             <h2 class="blind">page navigation</h2>
             <div class="unb">
               <h3 class="blind">사용자 설정 네비게이션</h3>
-              <ul class="clearfix first_margin">
-                <li>unb_01</li>
-                <li>unb_02</li>
-                <li>unb_03</li>
-                <li>unb_04</li>
+              <ul class="clearfix">
+                <li><a href="#">한국어</a></li>
+                <li><a href="#">sign in</a></li>
+                <li><a href="#">sign up</a></li>
+                <li><a href="#">site map</a></li>
               </ul>
             </div>
             <div class="gnb">
               <h3 class="blind">페이지 전체 네비게이션</h3>
-              <ul class="clearfix first_margin">
-                <li>gnb_01</li>
-                <li>gnb_02</li>
-                <li>gnb_03</li>
-                <li>gnb_04</li>
-                <li>gnb_05</li>
-                <li>gnb_06</li>
+              <ul class="clearfix">
+                <li><a href="#">about us</a></li>
+                <li><a href="#">menu</a></li>
+                <li><a href="#">gift</a></li>
+                <li><a href="#"><abbr title="Frequently Asked Questions">F A Q</abbr></a></li>
+                <li><a href="#">event</a></li>
+                <li><a href="#">notice</a></li>
               </ul>
             </div>
           </nav>
