h1 제목 부 로고 설명을 위한 title속성추가

--- a/c_project_01/code/html/main_v2.html
+++ b/c_project_01/code/html/main_v2.html
@@ -19,7 +19,7 @@
       <header id="headBox">
         <div class="area_head">
           <h1 id="logo" class="blind_area">
-            <a href="../index.html">
+            <a href="../index.html" title="osam coffee">
               <span>osam</span>
             </a>
           </h1>
