--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -59,7 +59,17 @@
           <li><a href="./d_02_video.html">영상파일 불러오기</a></li>
           <li><a href="./d_03_iframe.html">외부파일 불러오기</a></li>
         </ul>
+      </section><!-- //.part -->
+      <hr />
+      <section class="part">
+        <h2>form 영역</h2>
+        <ul>
+          <li><a href="./e_01_form_basic.html">form 구성하는 기본내용</a></li>
+          <li><a href="./e_02_form_type_attr.html">input요소의 type 속성</a></li>
+        </ul>
+
       </section>
+
       
       
     </div><!--// #wrap -->
