--- a/b_step_02/html/e_02_form_type_attr.html
+++ b/b_step_02/html/e_02_form_type_attr.html
@@ -58,7 +58,7 @@
             </div>
           </fieldset>
 
-          <fieldset>
+          <fieldset class="none">
             <legend>체크 항목 1</legend>
             <p>가고 싶은 여행지 1가지만 선택하시오.</p>
             <div>
@@ -75,7 +75,7 @@
             </div>
           </fieldset>
 
-          <fieldset>
+          <fieldset class="none">
             <legend>체크 항목 2</legend>
             <p>저녁에 먹고 싶은 음식을 모두 고르시오.</p>
             <div>
@@ -96,7 +96,12 @@
 
           <fieldset>
             <legend>확인용</legend>
-            <button type="submit">확인</button>
+            <input type="submit" value="확인" />
+            <input type="reset" value="취소" />
+            <input type="image" src="../img/icon/001-pin.png" alt="위치안내" value="위치안내"
+                   height="20px" />
+            <input type="button" value="번호 전송" accept=".jpg,.png,.pdf,.ai,.html,.css,.js" />
+            <input type="file" value="" />
           </fieldset>
 
           <fieldset>
