--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -66,6 +66,7 @@
         <ul>
           <li><a href="./e_01_form_basic.html">form 구성하는 기본내용</a></li>
           <li><a href="./e_02_form_type_attr.html">input요소의 type 속성</a></li>
+          <li><a href="./e_03_selector.html">형제선택자, 속성선택자</a></li>
         </ul>
 
       </section>
