형제선택자 예시

--- a/b_step_02/html/e_03_selector.html
+++ b/b_step_02/html/e_03_selector.html
@@ -57,6 +57,37 @@
         
       </div>
 
+      <div class="ex_wrap">
+        <form action="#" method="GET">
+          <fieldset>
+            <legend>체크사항</legend>
+            <p>스마트폰 구매시 파악하는 요구조건</p>
+
+            <ul class="smartphone_select">
+              <li>
+                <input type="checkbox" id="ck_01" name="ck" value="디자인" />
+                <label for="ck_01">
+                  <i class="fas fa-check-circle"></i>
+                  디자인</label>
+              </li>
+              <li>
+                <input type="checkbox" id="ck_02" name="ck" value="카메라 화소" />
+                <label for="ck_02">
+                  <i class="fas fa-check-circle"></i>
+                  카메라 화소</label>
+              </li>
+              <li>
+                <input type="checkbox" id="ck_03" name="ck" value="화면 크기" />
+                <label for="ck_03">
+                  <i class="fas fa-check-circle"></i>
+                  화면 크기</label>
+              </li>
+            </ul>
+
+          </fieldset>
+        </form>
+
+      </div>
     </div>
   </div>
   <!-- javascript -->
