속성선택자

--- a/b_step_02/html/e_03_selector.html
+++ b/b_step_02/html/e_03_selector.html
@@ -83,10 +83,20 @@
                   화면 크기</label>
               </li>
             </ul>
-
           </fieldset>
         </form>
+      </div>
+    </div>
 
+    <div class="part">
+      <h2>속성 선택자</h2>
+      <p>요소의 속성을 선택하는 선택자</p>
+      <div class="ex_wrap">
+        <div class="select">
+          <button type="submit">확인</button>
+          <button type="reset">취소</button>
+          <button type="button">버튼</button>
+        </div>
       </div>
     </div>
   </div>
