--- a/c_project_01/code/html/main_v2.html
+++ b/c_project_01/code/html/main_v2.html
@@ -29,8 +29,8 @@
               <h3 class="blind">사용자 설정 네비게이션</h3>
               <ul class="clearfix">
                 <li><a href="#">한국어</a></li>
-                <li><a href="#">sign in</a></li>
-                <li><a href="#">sign up</a></li>
+                <li><a href="./login.html">log in</a></li>
+                <li><a href="#">join</a></li>
                 <li><a href="#">site map</a></li>
               </ul>
             </div>
