--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -54,8 +54,9 @@
         </div>
       </header><!-- // #headBox -->
 
-      <article id="loginBox">
-
+      <article id="loginBox" class="clearfix">
+        <div class="intro_part"></div>
+        <div class="login_form"></div>
       </article>
            
       <footer id="footBox">
