실습예제-로그인페이지-intro_part영역

--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -55,7 +55,13 @@
       </header><!-- // #headBox -->
 
       <article id="loginBox" class="clearfix">
-        <div class="intro_part"></div>
+        <div class="intro_part">
+          <div class="intro_inner">
+            <div class="company_logo"></div>
+            <h2>log in</h2>
+            <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo dolores reiciendis assumenda dolore nostrum odit repellendus deserunt mollitia officia.</p>
+          </div>
+        </div>
         <div class="login_form"></div>
       </article>
            
