실습예제-form영역 틀 잡기

--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -62,7 +62,18 @@
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo dolores reiciendis assumenda dolore nostrum odit repellendus deserunt mollitia officia.</p>
           </div>
         </div>
-        <div class="login_form"></div>
+
+        <div class="login_form">
+          <form action="#" method="POST">
+            <fieldset>
+              <legend>사용자 계정 입력</legend>
+            </fieldset>
+
+            <fieldset>
+              <legend>확인버튼 및 기타/legend>
+            </fieldset>
+          </form>
+        </div>
       </article>
            
       <footer id="footBox">
