실습예제 - 로그인영역 - input영역 틀 잡기

--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -67,6 +67,22 @@
           <form action="#" method="POST">
             <fieldset>
               <legend>사용자 계정 입력</legend>
+              <div class="user_input">
+                <label for="usrMail">
+                  <span class="blind">사용자 로그인을 위한 계정 이메일주소를 입력하세요.</span>
+                  <i class="icon"></i>
+                </label>
+                <input type="email" id="usrMail" name="usrMail" value="" 
+                       placeholder="email@hostname.com" required />
+              </div>
+              <div class="user_input">
+                <label for="usrPw">
+                  <span class="blind">사용자의 로그인 비밀번호를 입력하세요.</span>
+                  <i class="icon"></i>
+                </label>
+                <input type="password" id="usrPw" name="usrPw" value="" 
+                       placeholder="password" required />
+              </div>
             </fieldset>
 
             <fieldset>
