실습예제-로그인페이지 - 비밀번호 찾기 및 회원가입버튼

--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -86,7 +86,14 @@
             </fieldset>
 
             <fieldset>
-              <legend>확인버튼 및 기타/legend>
+              <legend>확인버튼 및 기타</legend>
+              <div class="btn_inner">
+                <input type="submit" value="로그인" />
+              </div>
+              <div class="btn_inner">
+                <a href="#">비밀번호 찾기</a>
+                <a href="#">회원 가입</a>
+              </div>
             </fieldset>
           </form>
         </div>
