실습예제 - 로그인페이지 - 버튼 hover 및 focus처리 와 배경이미지 처리

--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -57,7 +57,9 @@
       <article id="loginBox" class="clearfix">
         <div class="intro_part">
           <div class="intro_inner">
-            <div class="company_logo"></div>
+            <div class="company_logo">
+              <!-- logo 이미지 삽입 -->
+            </div>
             <h2>log in</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo dolores reiciendis assumenda dolore nostrum odit repellendus deserunt mollitia officia.</p>
           </div>
