--- a/c_project_01/code/html/login.html
+++ b/c_project_01/code/html/login.html
@@ -63,6 +63,13 @@
             <h2>log in</h2>
             <p>Lorem ipsum dolor sit amet consectetur adipisicing elit. Delectus explicabo dolores reiciendis assumenda dolore nostrum odit repellendus deserunt mollitia officia.</p>
           </div>
+          <div class="video_inner">
+            <video autoplay muted loop preload="auto">
+              <source src="../multi/Drinking-coffee.webm" type="video/webm" />
+              <source src="../multi/Drinking-coffee.ogv" type="video/ogv" />
+              <source src="../multi/Drinking-coffee.mp4" type="video/mp4" />
+            </video>
+          </div>
         </div>
 
         <div class="login_form">
