--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -68,7 +68,13 @@
           <li><a href="./e_02_form_type_attr.html">input요소의 type 속성</a></li>
           <li><a href="./e_03_selector.html">형제선택자, 속성선택자</a></li>
         </ul>
-
+      </section>
+      <hr />
+      <section class="part">
+        <h2>다양한 효과 구성</h2>
+        <ul>
+          <li><a href="./f_01_shadow.html">구성요소에 대한 그림자 생성하기</a></li>
+        </ul>
       </section>
 
       
