--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -74,6 +74,7 @@
         <h2>다양한 효과 구성</h2>
         <ul>
           <li><a href="./f_01_shadow.html">구성요소에 대한 그림자 생성하기</a></li>
+          <li><a href="./f_02_border_radius.html">border-radius 사용하기</a></li>
         </ul>
       </section>
 
