--- a/b_step_02/html/f_01_shadow.html
+++ b/b_step_02/html/f_01_shadow.html
@@ -37,6 +37,30 @@
         <li>안쪽으로 그림자 이동한 형태</li>
       </ul>
     </div>
+
+    <div class="part">
+      <h2>글씨에 그림자 생성</h2>
+      <ul class="ex_wrap text_shadow">
+        <li>가로를 기준에서 3px 이동한형태로 그림자 배치</li>
+        <li>세로를 기준에서 3px 이동한형태로 그림자 배치</li>
+        <li>가로,세로를 기준에서 2px, 5px 이동한형태로 그림자 배치</li>
+        <li>가로,세로를 기준에서 - 수치로 이동한형태로 그림자 배치</li>
+        <li>가로,세로를 기준에서 번짐의 정도 체크</li>
+        <li>글씨에 배치되는 그림자를 안쪽으로 처리된것처럼</li>
+      </ul>
+    </div>
+
+    <div class="part">
+      <h2>이미지에 그림자 생성 및 기타...</h2>
+      <ul class="ex_wrap filter_set">
+        <li>이미지를 담은 요소 그림자주기 1</li>
+        <li>이미지를 담은 요소 그림자주기 2</li>
+        <li>이미지 번짐처리 (blur)</li>
+        <li>이미지 색상변경 1</li>
+        <li>이미지 색상변경 2</li>
+      </ul>
+
+    </div>
   </div>
   <!-- javascript -->
 </body>
