border-radius 일부영역 부분 처리

--- a/b_step_02/html/f_02_border_radius.html
+++ b/b_step_02/html/f_02_border_radius.html
@@ -24,7 +24,7 @@
   <div class="code_exam">
     <h1><a href="./a_content.html">웹표준</a></h1>
     <hr />
-    <div class="part">
+    <div class="part none">
       <h2>요소의 모서리 동그랗게 처리하기</h2>
       <ul class="ex_wrap radius">
         <li>radius_01</li>
@@ -40,7 +40,17 @@
         <li><a href="#">radius_11</a></li>
       </ul>
     </div>
-    
+    <div class="part">
+      <h2>요소 모서리 부분 처리</h2>
+      <ul class="ex_wrap radius_2">
+        <li>radius2-01</li>
+        <li>radius2-02</li>
+        <li>radius2-03</li>
+        <li>radius2-04</li>
+        <li>radius2-05</li>
+        <li>radius2-06</li>
+      </ul>
+    </div>
   </div>
   <!-- javascript -->
 </body>
