--- a/b_step_02/html/f_02_border_radius.html
+++ b/b_step_02/html/f_02_border_radius.html
@@ -24,7 +24,7 @@
   <div class="code_exam">
     <h1><a href="./a_content.html">웹표준</a></h1>
     <hr />
-    <div class="part none">
+    <div class="part">
       <h2>요소의 모서리 동그랗게 처리하기</h2>
       <ul class="ex_wrap radius">
         <li>radius_01</li>
