--- a/b_step_02/html/f_03_transform.html
+++ b/b_step_02/html/f_03_transform.html
@@ -32,23 +32,22 @@
           <div class="tr tr_02">현재위치에서 Y방향으로 -100px이동</div>
           <div class="tr tr_03">현재위치에서 x,Y방향으로 -100px, 50px이동</div>
         </div>
+
         <div class="clearfix none">
           <div class="sc sc_01">현재크기에서 50%작게</div>
           <div class="sc sc_02">현재크기에서 50%작게</div>
           <div class="sc sc_03">현재크기에서 130% 크게</div>
           <div class="sc sc_04">현재크기에서 w:130%, h:150% 크게</div>
         </div>
+        
         <div class="clearfix">
           <div class="ro ro_01">현재 크기에서 45도 회전</div>
           <div class="ro ro_02">현재 크기에서 180도 회전</div>
           <div class="ro ro_03">현재 크기에서 x축으로 45도</div>
           <div class="ro ro_04">y축으로 310도 회전</div>
-          <div class="ro ro_05">
-            <span>
-              z축 45도 각도 회전
-            </span>
-          </div>
-      </div>
+          <div class="ro ro_05"><span>z축 45도 각도 회전</span></div>
+        </div>       
+
       </div>
     </div>
   </div>
