transform 기능 skew 및 여러기능한번에 처리

--- a/b_step_02/html/f_03_transform.html
+++ b/b_step_02/html/f_03_transform.html
@@ -27,13 +27,13 @@
     <div class="part">
       <h2>transform</h2>
       <div class="ex_wrap">
-        <div class="clearfix none">
+        <div class="clearfix">
           <div class="tr tr_01">현재위치에서 x방향으로 200px이동</div>
           <div class="tr tr_02">현재위치에서 Y방향으로 -100px이동</div>
           <div class="tr tr_03">현재위치에서 x,Y방향으로 -100px, 50px이동</div>
         </div>
 
-        <div class="clearfix none">
+        <div class="clearfix">
           <div class="sc sc_01">현재크기에서 50%작게</div>
           <div class="sc sc_02">현재크기에서 50%작게</div>
           <div class="sc sc_03">현재크기에서 130% 크게</div>
@@ -47,6 +47,18 @@
           <div class="ro ro_04">y축으로 310도 회전</div>
           <div class="ro ro_05"><span>z축 45도 각도 회전</span></div>
         </div>       
+
+        <div class="clearfix">
+          <div class="sk sk_01">x축으로 45도 기울이기</div>
+          <div class="sk sk_02">y축으로 15도 기울이기</div>
+          <div class="sk sk_03">x,y축으로 15,60도 기울이기</div>
+        </div>
+
+        <div class="clearfix">
+          <div class="mul multi_01">크기를 2배로 키우고, x축방향 100px</div>
+          <div class="mul multi_02">처음엔 2배크기, rotate(45deg)</div>
+        </div>
+
 
       </div>
     </div>
