--- a/c_project_01/code/index.html
+++ b/c_project_01/code/index.html
@@ -9,7 +9,8 @@
 <body>
   <script>
     // window.location = "./html/main.html";
-    window.location = "./html/main_v2.html";
+    // window.location = "./html/main_v2.html";
+    window.location = "./html/main_v3.html";
   </script>
 </body>
 </html>
