--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -76,6 +76,7 @@
           <li><a href="./f_01_shadow.html">구성요소에 대한 그림자 생성하기</a></li>
           <li><a href="./f_02_border_radius.html">border-radius 사용하기</a></li>
           <li><a href="./f_03_transform.html">transform</a></li>
+          <li><a href="./f_04_transition.html">단방향 애니메이션-transition</a></li>
         </ul>
       </section>
 
