--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -77,6 +77,13 @@
           <li><a href="./f_02_border_radius.html">border-radius 사용하기</a></li>
           <li><a href="./f_03_transform.html">transform</a></li>
           <li><a href="./f_04_transition.html">단방향 애니메이션-transition</a></li>
+          <li><a href="./f_05_animation.html">애니메이션-animation</a></li>
+        </ul>
+      </section>
+      <section class="part">
+        <h2>기타 기능 파악</h2>
+        <ul>
+          <li><a href="./g_01_variable.html">변수 설정하기</a></li>
         </ul>
       </section>
 
