--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -84,6 +84,7 @@
         <h2>기타 기능 파악</h2>
         <ul>
           <li><a href="./g_01_variable.html">변수 설정하기</a></li>
+          <li><a href="./g_02_unit_vw_vh.html">브라우저를 기준으로 크기를 설정하는 단위</a></li>
         </ul>
       </section>
 
