반응형 제작을위한 세팅

--- a/b_step_02/html/a_content.html
+++ b/b_step_02/html/a_content.html
@@ -85,6 +85,7 @@
         <ul>
           <li><a href="./g_01_variable.html">변수 설정하기</a></li>
           <li><a href="./g_02_unit_vw_vh.html">브라우저를 기준으로 크기를 설정하는 단위</a></li>
+          <li><a href="./g_03_rwd.html">반응형웹</a></li>
         </ul>
       </section>
 
