--- a/b_step_02/html/g_03_rwd.html
+++ b/b_step_02/html/g_03_rwd.html
@@ -23,7 +23,21 @@
 <body>
   <!-- layout -->
   <div id="wrap">
-    반응형웹 체크
+    <header id="headBox">
+      <h1>headBox</h1>
+    </header>
+    <section id="viewBox">
+      <h2>viewBox</h2>
+    </section>
+    <article id="contentBox">
+      <h2>contentBox</h2>
+    </article>
+    <article id="supportBox">
+      <h2>supportBox</h2>
+    </article>
+    <footer id="footBox">
+      <h2>footBox</h2>
+    </footer>
   </div>
   <!-- javascript -->
 </body>
