프로젝트 진행전 세팅-구형브라우저를 위한 일부파일 첨부

--- a/c_project_01/code/index.html
+++ b/c_project_01/code/index.html
@@ -10,7 +10,8 @@
   <script>
     // window.location = "./html/main.html";
     // window.location = "./html/main_v2.html";
-    window.location = "./html/main_v3.html";
+    // window.location = "./html/main_v3.html";
+    window.location = "./html/main_v4.html";
   </script>
 </body>
 </html>
