--- a/c_project_01/code/html/main_v4.html
+++ b/c_project_01/code/html/main_v4.html
@@ -93,16 +93,16 @@
         
         <div class="area_indicator">
           <!-- area_indicator -->
-        <ul class="blind_area">
+        <ul class="blind_area first_margin">
           <li class="act"><a href="#"><span>최신 첫번째 내용</span></a></li>
           <li><a href="#"><span>최신 두번째 내용</span></a></li>
           <li><a href="#"><span>최신 세번째 내용</span></a></li>
         </ul>
         </div>
         
-        <div class="area_content first_margin blind_area">
+        <div class="area_content blind_area newBox_area">
           <!-- area_content -->
-          <ul>
+          <ul class="first_margin clearfix">
             <li><a href="#"><span>card_01</span></a></li>
             <li><a href="#"><span>card_02</span></a></li>
             <li><a href="#"><span>card_03</span></a></li>
