--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -32,6 +32,7 @@
       <div class="list_item">
         <ul>
           <li><a href="./b_01_js_link.html">js 코드를 작성하는 위치</a></li>
+          <li><a href="./b_02_js_variable.html">변수의 이해</a></li>
         </ul>
       </div>
     </section>
