--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/a_00_content.css">
+  <link rel="stylesheet" href="../css/src/a_content.css">
 
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
