js-자료형 숫자,문자,논리형

--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -17,7 +17,7 @@
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
 
-  <title>a_00_content</title>
+  <title>content</title>
 </head>
 <body>
   <!-- layout -->
@@ -33,6 +33,7 @@
         <ul>
           <li><a href="./b_01_js_link.html">js 코드를 작성하는 위치</a></li>
           <li><a href="./b_02_js_variable.html">변수의 이해</a></li>
+          <li><a href="./b_03_dataType.html">자료형 파악하기</a></li>
         </ul>
       </div>
     </section>
