--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -34,6 +34,7 @@
           <li><a href="./b_01_js_link.html">js 코드를 작성하는 위치</a></li>
           <li><a href="./b_02_js_variable.html">변수의 이해</a></li>
           <li><a href="./b_03_dataType.html">자료형 파악하기</a></li>
+          <li><a href="./b_04_operator.html">연산자 이해</a></li>
         </ul>
       </div>
     </section>
