--- a/b_step_03/html/b_04_operator.html
+++ b/b_step_03/html/b_04_operator.html
@@ -12,7 +12,7 @@
 
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <!-- <link rel="stylesheet" href="../css/src/b_04_operator.css"> -->
+  <link rel="stylesheet" href="../css/src/b_04_operator.css">
 
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
@@ -30,7 +30,15 @@
         연산자는 다양한 셈을 위한 공식내용 <br />
         산술연산, 비교연산, 논리연산, 삼항연산 ...
       </p>
-      <div class="ex_wrap"></div>
+      <div class="ex_wrap">
+        <div class="btn_area">
+          <button id="btn" type="button">클릭</button>
+        </div>
+
+        <p class="content">
+          내용 클릭시 처리
+        </p>
+      </div>
     </div>
   </div>
   <!-- javascript -->
