--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -36,6 +36,7 @@
           <li><a href="./b_03_dataType.html">자료형 파악하기</a></li>
           <li><a href="./b_04_operator.html">연산자 이해</a></li>
           <li><a href="./b_05_condition.html">조건문</a></li>
+          <li><a href="./b_06_repeat.html">반복문</a></li>
         </ul>
       </div>
     </section>
