--- a/b_step_03/html/b_06_repeat.html
+++ b/b_step_03/html/b_06_repeat.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- b_05_condition.html -->
+<!-- b_06_repeat.html -->
 <html lang="ko-KR">
 <head>
   <meta charset="UTF-8">
@@ -12,41 +12,25 @@
 
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <!-- <link rel="stylesheet" href="../css/src/b_05_condition.css"> -->
+  <!-- <link rel="stylesheet" href="../css/src/b_06_repeat.css"> -->
 
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
 
-  <title>b_05_condition</title>
+  <title>b_06_repeat</title>
 </head>
 <body>
   <!-- layout -->
   <div class="code_exam">
     <h1><a href="./a_content.html">웹표준</a></h1>
     <hr />
-    <div class="part">
-      <h2>조건문</h2>
-      <p>
-        특정 조건을 부여하여, 내용이 일치하거나, 
-        일치하지 않을경우에 해당하는 긴능을 수행하는 역할
-      </p>
-      <div class="ex_wrap">
-        <form action="#" method="GET">
-          <fieldset>
-            <legend>나이 입력</legend>
-            <label for="old">사용자의 나이를 입력하세요.</label>
-            <input type="text" name="old" id="old" value="" />
-            
-            <button type="button">확인</button>
-          </fieldset>
-        </form>
-        
-        <p>당신은 : <span> </span> </p>
-      </div>
+    <div class="part"> 
+      <h2>반복문 사용하기</h2>
 
+      <div class="ex_wrap"></div>
     </div>
   </div>
   <!-- javascript -->
-  <script src="../js/src/b_05_condition.js"></script>
-</body>
+  <script src="../js/src/b_05_repeat.js"></script>
+</body> 
 </html>
