js - 반복문 -for in, forEach

--- a/b_step_03/html/b_06_repeat.html
+++ b/b_step_03/html/b_06_repeat.html
@@ -27,7 +27,11 @@
     <div class="part"> 
       <h2>반복문 사용하기</h2>
 
-      <div class="ex_wrap"></div>
+      <div class="ex_wrap">
+        <ul>
+          
+        </ul>
+      </div>
     </div>
   </div>
   <!-- javascript -->
