--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -37,6 +37,7 @@
           <li><a href="./b_04_operator.html">연산자 이해</a></li>
           <li><a href="./b_05_condition.html">조건문</a></li>
           <li><a href="./b_06_repeat.html">반복문</a></li>
+          <li><a href="./b_07_array.html">배열</a></li>
         </ul>
       </div>
     </section>
