js - 일반변수 및 참조변수

--- a/b_step_03/html/a_content.html
+++ b/b_step_03/html/a_content.html
@@ -38,6 +38,7 @@
           <li><a href="./b_05_condition.html">조건문</a></li>
           <li><a href="./b_06_repeat.html">반복문</a></li>
           <li><a href="./b_07_array.html">배열</a></li>
+          <li><a href="./b_08_etc.html">변수의 차이, 객체의 혼합</a></li>
         </ul>
       </div>
     </section>
