--- a/b_step_04/html/b_02_jQuery_selector.html
+++ b/b_step_04/html/b_02_jQuery_selector.html
@@ -27,7 +27,45 @@
   <hr />
   <div class="part">
     <h2>사용할 기능</h2>
-    <div class="ex_wrap"></div>
+    <div class="ex_wrap">
+      <div id="box">
+        <h3>jQuery용 테스트 제목</h3>
+        <p><em>jQuery</em>선택자를 이해하고 그것에 따른 태그의 내용을 디자인</p>
+
+        <ul class="list_wrap">
+          <li><span>list_01</span></li>
+          <li>list_02</li>
+          <li>list_03</li>
+          <li>list_04</li>
+          <li><strong>list_05</strong></li>
+        </ul>
+        
+        <ul class="list_wrap other_list">
+          <li>other_list_01</li>
+          <li><a href="#">other_list_02</a></li>
+          <li><button type="button">other_list_03</button></li>
+          <li><span><strong>other</strong>_list_04</span></li>
+        </ul>
+
+        <ol>
+          <li>order_list_01</li>
+          <li>order_list_02</li>
+          <li>order_list_03</li>
+          <li>order_list_04</li>
+          <li>order_list_05</li>
+          <li>order_list_06</li>
+          <li>order_list_07</li>
+          <li>order_list_08</li>
+          <li>order_list_09</li>
+          <li>order_list_10</li>
+        </ol>
+      </div>
+      <p>
+        <strong>jQuery 사용시 주의사항은</strong> <br />
+        범위를 넓게 잡고 순서를 선택시 예상범위가 아닌곳을 선택할 수 있다. 
+      </p>
+
+    </div>
   </div>
 </div>
 
