jQuery -  부모선택자

--- a/b_step_04/html/b_02_jQuery_selector.html
+++ b/b_step_04/html/b_02_jQuery_selector.html
@@ -43,7 +43,7 @@
         <ul class="list_wrap other_list">
           <li>other_list_01</li>
           <li><a href="#">other_list_02</a></li>
-          <li><button type="button">other_list_03</button></li>
+          <li id="other"><button type="button">other_list_03</button></li>
           <li><span><strong>other</strong>_list_04</span></li>
         </ul>
 
