--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -34,6 +34,7 @@
         <ul>
           <li><a href="./b_01_jQuery_setting.html">jQuery 설치, 기초 테스트, 버전 확인</a></li>
           <li><a href="./b_02_jQuery_selector.html">jQuery 선택자</a></li>
+          <li><a href="./b_03_jQuery_contents.html">내용작성 및 확인</a></li>
         </ul>
       </div>
     </div>
