--- a/b_step_04/html/b_04_jQuery_event.html
+++ b/b_step_04/html/b_04_jQuery_event.html
@@ -29,8 +29,11 @@
     <div class="ex_wrap">
       <p><em>이벤트 처리:</em> <span>발생한 이벤트 내용</span></p>
       <ul class="evt">
-        <li>클릭</li>
-        <li><a href="#">클릭 및 페이지 이동</a></li>
+        <li>01_클릭</li>
+        <li><a href="#">02_클릭</a></li>
+        <li>03_더블클릭</li>
+        <li>04_마우스 누르거나, 띌경우</li>
+        <li>05_마우스 올리거나, 벗어나는경우</li>
       </ul>
     </div>
   </div>
