--- a/b_step_04/html/b_04_jQuery_event.html
+++ b/b_step_04/html/b_04_jQuery_event.html
@@ -13,7 +13,7 @@
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
   <link rel="stylesheet" href="../css/src/b_04_jQuery_event.css">
-  
+  <script src="../ie/modernizr-custom.js"></script>
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   
@@ -34,13 +34,15 @@
         <li>03_더블클릭</li>
         <li>04_마우스 누르거나, 띌경우</li>
         <li>05_마우스 올리거나, 벗어나는경우</li>
+        <li><a href="#">06_focus</a></li>
+        <li><a href="#">07_scroll move</a></li>        
       </ul>
     </div>
   </div>
 </div>
 
   <!-- javascript -->
-  <script src="../ie/modernizr-custom.js"></script>
+  
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
   <script src="../js/src/b_04_jQuery_event.js"></script>
