jQuery - show,hide,toggle

--- a/b_step_04/html/b_05_jQuery_show_hide.html
+++ b/b_step_04/html/b_05_jQuery_show_hide.html
@@ -29,7 +29,7 @@
     <h2>show/hide</h2>
     <div class="ex_wrap">
       <div class="img_viewer">
-        <div class="gallery_img" hidden>이미지 나타나게 만들기</div>
+        <div class="gallery_img">이미지 나타나게 만들기</div>
       </div>
       <ul class="btn">
         <li class="view">
@@ -50,7 +50,7 @@
           <button type="button">hide</button> |
           <button type="button">toggle</button>
         </li>
-        <li class="class">
+        <li class="class_set">
           <span>class:</span>
           <button type="button">show</button> | 
           <button type="button">hide</button> |
