jQuery - eq 및 index

--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -37,6 +37,7 @@
           <li><a href="./b_03_jQuery_contents.html">내용작성 및 확인</a></li>
           <li><a href="./b_04_jQuery_event.html">이벤트 처리</a></li>
           <li><a href="./b_05_jQuery_show_hide.html">show, hide</a></li>
+          <li><a href="./b_06_jQuery_eq_index.html">eq, index</a></li>
         </ul>
       </div>
     </div>
