반응형웹작업을 위한 레이아웃(기본레이아웃구성)

--- a/c_project_01/code/html/main_v4.html
+++ b/c_project_01/code/html/main_v4.html
@@ -249,7 +249,7 @@
         <h2 class="blind">후원사</h2>
         <div class="max_width_01 sponsor_area blind_area">
           <!-- sponsor_area -->
-          <ul>
+          <ul class="clearfix">
             <li><a href="#"><span>후원사_01</span></a></li>
             <li><a href="#"><span>후원사_02</span></a></li>
             <li><a href="#"><span>후원사_03</span></a></li>
@@ -302,16 +302,17 @@
 
             <div class="social_family">
               <h3 class="blind">social list and family site</h3>
-              <div class="social">
+              <div class="social blind_area">
                 <ul>
-                  <li><a href="#">sns_01</a></li>
-                  <li><a href="#">sns_02</a></li>
-                  <li><a href="#">sns_03</a></li>
+                  <li><a href="#"><span>sns_01</span></a></li>
+                  <li><a href="#"><span>sns_02</span></a></li>
+                  <li><a href="#"><span>sns_03</span></a></li>
                 </ul>
               </div>              
               <div class="family_site">
                 <label for="site" class="blind">family site</label>
                 <select name="" id="site">
+                  <option>family site</option>
                   <option value="#">site_01</option>
                   <option value="#">site_02</option>
                   <option value="#">site_03</option>
