--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -38,6 +38,7 @@
           <li><a href="./b_04_jQuery_event.html">이벤트 처리</a></li>
           <li><a href="./b_05_jQuery_show_hide.html">show, hide</a></li>
           <li><a href="./b_06_jQuery_eq_index.html">eq, index</a></li>
+          <li><a href="./b_07_accordion.html">아코디언메뉴</a></li>
         </ul>
       </div>
     </div>
@@ -46,3 +47,4 @@
   <!-- javascript -->
 </body>
 </html>
+
