실무예제 jQuery - 아코디언 메뉴 설정

--- a/b_step_04/html/b_07_accordion.html
+++ b/b_step_04/html/b_07_accordion.html
@@ -66,6 +66,50 @@
       </dl>
     </div>
 
+    <div class="accor2">
+      <ul>
+        <li>
+          <div class="nav_title">
+            <button type="butotn">nav_01</button>
+          </div>
+          <div class="sub_list">
+            <a href="#">list_1-01</a>
+            <a href="#">list_1-02</a>
+            <a href="#">list_1-03</a>
+            <a href="#">list_1-04</a>
+          </div>
+        </li>
+        <li>
+          <div class="nav_title">
+            <button type="butotn">nav_02</button>
+          </div>
+          <div class="sub_list">
+            <a href="#">list_2-01</a>
+            <a href="#">list_2-02</a>
+            <a href="#">list_2-03</a>
+            <a href="#">list_2-04</a>
+            <a href="#">list_2-05</a>
+          </div>
+        </li>
+        <li>
+          <div class="nav_title">
+            <button type="butotn">nav_03</button>
+          </div>
+          <div class="sub_list">
+            <a href="#">list_3-01</a>
+            <a href="#">list_3-02</a>
+          </div>
+        </li>
+        <li>
+          <div class="nav_title">
+            <button type="butotn">nav_04</button>
+          </div>
+          <div class="sub_list">
+            <a href="#">list_4-01</a>
+          </div>
+        </li>
+      </ul>
+    </div>
   </div>
 </div>
 
@@ -73,5 +117,6 @@
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
   <script src="../js/src/b_07_accordion.js"></script>
+  <script src="../js/src/b_07_accordion2.js"></script>
 </body>
 </html>
