gallery_기본 html/css 세팅

--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -39,10 +39,11 @@
           <li><a href="./b_05_jQuery_show_hide.html">show, hide</a></li>
           <li><a href="./b_06_jQuery_eq_index.html">eq, index</a></li>
           <li><a href="./b_07_accordion.html">아코디언메뉴</a></li>
+          <li><a href="./b_08_gallery.html">갤러리</a></li>
+          
         </ul>
       </div>
-    </div>
-   
+    </div>  
   </div>
   <!-- javascript -->
 </body>
