jQuery_모달윈도우 속성설정

--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -40,6 +40,7 @@
           <li><a href="./b_06_jQuery_eq_index.html">eq, index</a></li>
           <li><a href="./b_07_accordion.html">아코디언메뉴</a></li>
           <li><a href="./b_08_gallery.html">갤러리</a></li>
+          <li><a href="./b_09_modal.html">모달(팝업) 윈도우</a></li>
           
         </ul>
       </div>
