--- a/b_step_04/html/a_content.html
+++ b/b_step_04/html/a_content.html
@@ -41,6 +41,7 @@
           <li><a href="./b_07_accordion.html">아코디언메뉴</a></li>
           <li><a href="./b_08_gallery.html">갤러리</a></li>
           <li><a href="./b_09_modal.html">모달(팝업) 윈도우</a></li>
+          <li><a href="./b_10_get_json.html">json 파일 가져오기</a></li>
           
         </ul>
       </div>
