jQuery-슬라이드 광고기능 기본형

--- a/b_step_05/html/a_content.html
+++ b/b_step_05/html/a_content.html
@@ -30,6 +30,7 @@
     <div class="ex_wrap">
       <ul>
         <li><a href="./b_01_slide_structor.html">슬라이드 기본 구성에 따른 구조</a></li>
+        <li><a href="./b_02_slide_position_indicator.html">동일한 위치에서 이미지 변경, 인디케이터 활용</a></li>
       </ul>
     </div>
   </div>
