jquery - 인디케이터를 활용한 가로형 슬라이드

--- a/b_step_05/html/b_02_slide_horizontal_indicator.html
+++ b/b_step_05/html/b_02_slide_horizontal_indicator.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- b_02_slide_position_indicator.html -->
+<!-- b_02_slide_horizontal_indicator.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
@@ -12,13 +12,13 @@
   
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/b_02_slide_position_indicator.css">
+  <link rel="stylesheet" href="../css/src/b_02_slide_horizontal_indicator.css">
   <script src="../js/common/modernizr-custom.js"></script>
   
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   
-  <title>b_02_slide_position_indicator</title>
+  <title>b_02_slide_horizontal_indicator</title>
 </head>
 <body>
   <!-- layout -->
@@ -28,7 +28,7 @@
   <div class="part">
     <h2>slide 광고기능 - position이용 배치</h2>
     <div class="ex_wrap slide_set">
-      <h3>레이아웃 이용 및 indicator 처리</h3>
+      <h3>가로형 레이아웃 이용 및 indicator 처리</h3>
       
       <div class="indicator">
         <ul>
@@ -41,8 +41,8 @@
       </div>
 
       <div class="slide">
-        <div class="slide_wrapper position_slide">
-          <div id="slideT_01" class="slide_con_01 action">광고 01</div>
+        <div class="slide_wrapper horizontal_slide">
+          <div id="slideT_01" class="slide_con_01">광고 01</div>
           <div id="slideT_02" class="slide_con_02">광고 02</div>
           <div id="slideT_03" class="slide_con_03">광고 03</div>
           <div id="slideT_04" class="slide_con_04">광고 04</div>
@@ -56,6 +56,6 @@
   <!-- javascript -->
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
-  <script src="../js/src/b_02_slide_position_indicator.js"></script>
+  <script src="../js/src/b_02_slide_horizontal_indicator.js"></script>
 </body>
 </html>
