--- a/b_step_05/html/b_02_slide_horizontal_indicator.html
+++ b/b_step_05/html/b_02_slide_horizontal_indicator.html
@@ -51,11 +51,36 @@
       </div>
     </div>
   </div>
+
+  <div class="part">
+    <h2>slide 광고기능 - position이용 배치</h2>
+    <div class="ex_wrap slide_set2">
+      <h3>가로형 레이아웃 이용 및 indicator 처리</h3>
+      
+      <div class="slide_btn">
+        <button type="button" class="next">다음내용보기</button>
+        <button type="button" class="prev">이전내용보기</button>
+      </div>
+
+      <div class="slide">
+        <div class="slide_wrapper horizontal_slide">
+          <div id="slideT_01" class="slide_con_01">광고 01</div>
+          <div id="slideT_02" class="slide_con_02">광고 02</div>
+          <div id="slideT_03" class="slide_con_03">광고 03</div>
+          <div id="slideT_04" class="slide_con_04">광고 04</div>
+          <div id="slideT_05" class="slide_con_05">광고 05</div>
+        </div>
+      </div>
+    </div>
+  </div>
+
 </div>
 
   <!-- javascript -->
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
   <script src="../js/src/b_02_slide_horizontal_indicator.js"></script>
+  <script src="../js/src/b_02_slide_horizontal_btn.js"></script>
+
 </body>
 </html>
