--- a/b_step_05/html/b_03_slide_hofizontal_btn.html
+++ b/b_step_05/html/b_03_slide_hofizontal_btn.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- a_content.html -->
+<!-- b_03_slide_hofizontal_btn.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
@@ -12,13 +12,13 @@
   
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/a_content.css">
+  <link rel="stylesheet" href="../css/src/b_03_slide_hofizontal_btn.css">
   <script src="../js/common/modernizr-custom.js"></script>
   
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   
-  <title>a_content</title>
+  <title>b_03_slide_hofizontal_btn</title>
 </head>
 <body>
   <!-- layout -->
@@ -26,14 +26,24 @@
   <h1><a href="./a_content.html">jQuery 기초</a></h1>
   <hr />
   <div class="part">
-    <h2>슬라이드 광고</h2>
-    <div class="ex_wrap">
-      <ul>
-        <li><a href="./b_01_slide_structor.html">슬라이드 기본 구성에 따른 구조</a></li>
-        <li><a href="./b_02_slide_position_indicator.html">동일한 위치에서 이미지 변경, 인디케이터 활용</a></li>
-        <li><a href="./b_02_slide_horizontal_indicator.html">가로형 슬라이드, 인디케이터 활용</a></li>
-        <li><a href="./b_03_slide_hofizontal_btn.html">가로형 슬라이드 다음/이전 버튼 활용</a></li>
-      </ul>
+    <h2>slide 광고기능 - 가로형이용 배치</h2>
+    <div class="ex_wrap slide_set">
+      <h3>가로형 레이아웃 이용 및 indicator 처리</h3>
+      
+      <div class="slide_btn">
+        <button type="button" class="next">다음내용보기</button>
+        <button type="button" class="prev">이전내용보기</button>
+      </div>
+
+      <div class="slide">
+        <div class="slide_wrapper horizontal_slide">
+          <div id="slideT_01" class="slide_con_01">광고 01</div>
+          <div id="slideT_02" class="slide_con_02">광고 02</div>
+          <div id="slideT_03" class="slide_con_03">광고 03</div>
+          <div id="slideT_04" class="slide_con_04">광고 04</div>
+          <div id="slideT_05" class="slide_con_05">광고 05</div>
+        </div>
+      </div>
     </div>
   </div>
 </div>
@@ -41,6 +51,6 @@
   <!-- javascript -->
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
-  <script src="../js/src/a_content.js"></script>
+  <script src="../js/src/b_03_slide_hofizontal_btn.js"></script>
 </body>
 </html>
