--- a/b_step_05/html/a_content.html
+++ b/b_step_05/html/a_content.html
@@ -33,6 +33,7 @@
         <li><a href="./b_02_slide_position_indicator.html">동일한 위치에서 이미지 변경, 인디케이터 활용</a></li>
         <li><a href="./b_02_slide_horizontal_indicator.html">가로형 슬라이드, 인디케이터 활용</a></li>
         <li><a href="./b_03_slide_hofizontal_btn.html">가로형 슬라이드 다음/이전 버튼 활용</a></li>
+        <li><a href="./b_04_slide_hofizontal_btn_v2.html">가로형 슬라이드 다음/이전 버튼 활용 및 확장기능</a></li>
       </ul>
     </div>
   </div>
