--- a/b_step_05/html/b_04_slide_hofizontal_btn_v2.html
+++ b/b_step_05/html/b_04_slide_hofizontal_btn_v2.html
@@ -28,7 +28,7 @@
   <div class="part">
     <h2>slide 광고기능 - 가로형이용 배치</h2>
     <div class="ex_wrap slide_set">
-      <h3>가로형 레이아웃 이용 및 indicator 처리</h3>
+      <h3>가로형 레이아웃 이용 처리</h3>
       
       <div class="slide_btn">
         <button type="button" class="next">다음내용보기</button>
