--- a/b_step_05/html/b_04_slide_hofizontal_btn_v3.html
+++ b/b_step_05/html/b_04_slide_hofizontal_btn_v3.html
@@ -1,5 +1,5 @@
 <!DOCTYPE html>
-<!-- b_03_slide_hofizontal_btn.html -->
+<!-- b_04_slide_hofizontal_btn_v2.html -->
 <html lang="ko-KR" class="no-js">
 <head>
   <meta charset="UTF-8">
@@ -12,13 +12,13 @@
   
   <link rel="stylesheet" href="../css/common/reset.css">
   <link rel="stylesheet" href="../css/common/common.css">
-  <link rel="stylesheet" href="../css/src/b_03_slide_hofizontal_btn.css">
-  <script src="../js/common/modernizr-custom.js"></script>
+  <link rel="stylesheet" href="../css/src/b_04_slide_hofizontal_btn_v3.css">
+  <script src="../ie/modernizr-custom.js"></script>
   
   <link rel="apple-touch-icon" href="../favicon.png">
   <link rel="shortcut icon" href="../favicon.png" type="image/png">
   
-  <title>b_03_slide_hofizontal_btn</title>
+  <title>b_04_slide_hofizontal_btn_v2</title>
 </head>
 <body>
   <!-- layout -->
@@ -28,12 +28,24 @@
   <div class="part">
     <h2>slide 광고기능 - 가로형이용 배치</h2>
     <div class="ex_wrap slide_set">
-      <h3>가로형 레이아웃 이용 처리</h3>
+      <h3>가로형 레이아웃 이용 및 indicator 처리</h3>
       
       <div class="slide_btn">
         <button type="button" class="next">다음내용보기</button>
         <button type="button" class="prev">이전내용보기</button>
       </div>
+
+      <div class="indicator">
+        <ul>
+          <li class="action"><a href="#slideT_01"><span class="blind">선택된 광고 01에 대한 내용을 요약 설명</span></a></li>
+          <li><a href="#slideT_02"><span class="blind">선택된 광고 02에 대한 내용을 요약 설명</span></a></li>
+          <li><a href="#slideT_03"><span class="blind">선택된 광고 03에 대한 내용을 요약 설명</span></a></li>
+          <li><a href="#slideT_04"><span class="blind">선택된 광고 04에 대한 내용을 요약 설명</span></a></li>
+          <li><a href="#slideT_05"><span class="blind">선택된 광고 05에 대한 내용을 요약 설명</span></a></li>
+        </ul>
+        <p><em class="now">1</em>/<span class="total">5</span></p>
+      </div>
+
 
       <div class="slide">
         <div class="slide_wrapper horizontal_slide">
@@ -51,6 +63,6 @@
   <!-- javascript -->
   <script src="../js/common/jquery-3.6.0.min.js"></script>
   <script src="../js/common/jquery-ui.min.js"></script>
-  <script src="../js/src/b_03_slide_hofizontal_btn.js"></script>
+  <script src="../js/src/b_04_slide_hofizontal_btn_v3.js"></script>
 </body>
 </html>
