jQuery - 터치 이벤트기능을 위한  세팅

--- a/b_step_05/html/a_content.html
+++ b/b_step_05/html/a_content.html
@@ -34,7 +34,8 @@
         <li><a href="./b_02_slide_horizontal_indicator.html">가로형 슬라이드, 인디케이터 활용</a></li>
         <li><a href="./b_03_slide_hofizontal_btn.html">가로형 슬라이드 다음/이전 버튼 활용</a></li>
         <li><a href="./b_04_slide_hofizontal_btn_v2.html">가로형 슬라이드 다음/이전 버튼 활용 및 확장기능</a></li>
-        <li><a href="./b_04_slide_hofizontal_btn_v3.html">가로형 슬라이드 다음/이전 버튼 활용 및 확장기능</a></li>
+        <li><a href="./b_04_slide_hofizontal_btn_v3.html">가로형 슬라이드 다음/이전 버튼, indicator, autoplay</a></li>
+        <li><a href="./b_04_slide_hofizontal_swipe.html">가로형 슬라이드 swipe 확장기능</a></li>
       </ul>
     </div>
   </div>
